[package]
name = "axum_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.2"
tokio = { version = "1.24.1", features = ["rt-multi-thread", "macros"] }

serde = "1.0.152"
serde_derive = "1.0.152"

local-ip-address = "0.5.1"
toml = "0.5.10"
exitcode = "1.1.2"
