[package]
name = "axum_service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.2"
tokio = { version = "1.24.1", features = ["rt-multi-thread", "macros"] }

serde = "1.0.152"
serde_derive = "1.0.152"

local-ip-address = "0.5.1"
toml = "0.5.10"
exitcode = "1.1.2"

reqwest = { version = "0.11.13", features = ["rustls-tls"] }
simplelog = "0.12.0"
log = "0.4.17"
time = "*"

[profile.release]
strip = true
opt-level = "s"
lto = true
panic = "abort"
codegen-units = 1