[package]
name = "axum_service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

local-ip-address = "0.5"
toml = "0.7"
exitcode = "1"

reqwest = { version = "0.11.13", features = ["rustls-tls"] }
simplelog = "0.12.0"
log = "0.4"
time = "0.3"

[profile.release]
strip = true
opt-level = "s"
lto = true
panic = "abort"
codegen-units = 1
